added freezing function, moveLeft and moveRight functions, basic game logic

--- a/index.html
+++ b/index.html
@@ -215,6 +215,17 @@
       <div class="cell"></div>
       <div class="cell"></div>
       <div class="cell"></div>
+
+      <div class="taken"></div>
+      <div class="taken"></div>
+      <div class="taken"></div>
+      <div class="taken"></div>
+      <div class="taken"></div>
+      <div class="taken"></div>
+      <div class="taken"></div>
+      <div class="taken"></div>
+      <div class="taken"></div>
+      <div class="taken"></div>
     </div>
   </body>
 </html>
